Fix icon color in dark mode

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -182,12 +182,12 @@
 
               i {
                 font-size: 24px;
-                color: $light-mode-icon;
+                // color: $light-mode-icon;
               }
             }
 
             .theme-dark a {
-              color: $dark-mode-icon;
+              color: $light-mode-icon;
 
               i {
                 color: $dark-mode-icon;
